fetching data from db and writed in files.

--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,4 @@
 ################################################################################
 
 /AssurantRampUp/.vs/AssurantRampUp/v15
+/AssurantRampUp
